--- a/index.html
+++ b/index.html
@@ -4,36 +4,37 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> Британський кіт </title>
+	<link rel="stylesheet" type="text/css" href="css/base.css">
 </head>
 <body>
 	<header>
 		<nav> 
-			<ul>
-				<li> <a href="#"> Основна сторінка </a> </li>
-				<li> <a href="pages/contact.html"> Контактна інформація </a> </li>
-				<li> <a href="pages/gallery.html"> Галерея </a> </li>
+			<ul class="header_nav">
+				<li class="header_formatted"> <a class="header_text" href="#"> Основна сторінка </a> </li>
+				<li class="header_formatted"> <a class="header_text" href="pages/contact.html"> Контактна інформація </a> </li>
+				<li class="header_formatted"> <a class="header_text" href="pages/gallery.html"> Галерея </a> </li>
 			</ul>
 		</nav>
-		<h1> Все про Британських кішок </h1>
+		<h1 class="text_center"> Все про Британських кішок </h1>
 	</header>
 	<main>
 		<div> 
-			<h2>Особливості британських котів </h2> 
+			<h2 class="text_center">Особливості британських котів </h2> 
 			<p>
 				<b> Британська короткошерста кішка </b> відома у світі своєю гармонійно складеною статурою. Вона має коротку, але густу та щільну шерсть. Хвостик зазвичай товстий, але не довгий. Очі розумні, великі й посаджені широко. Вони швидко бігають і стрибають на коротких, але міцних ногах. Британська кішка відрізняється гарним здоров'ям і витривалістю в різних умовах проживання. Якщо побачити в ній справжнього друга, то кішка буде жити поруч близько двадцяти років.
 			</p>
 		</div>
 		<div> 
-			<h2> З ким може подружитися британський кіт </h2>
+			<h2 class="text_center"> З ким може подружитися британський кіт </h2>
 			<p> Британська порода кішок легко подружиться навіть із представниками інших тварин. Але з усім тим вони будуть із ними дружити, поки не відчують їхню перевагу над собою. Злопам'ятний характер котів не дозволить їм терпіти над собою знущання </p>
 
 		</div>
 		<div> 
-			<h2> Найкращий друг для зайнятої людини </h2>
+			<h2 class="text_center"> Найкращий друг для зайнятої людини </h2>
 			<p> Як ми бачимо з опису <i> британський короткошерстий кіт </i> - це хороший потенційний друг, що відрізняється розумом, спокоєм і адаптацією до складних умов. Але <b> варто пам'ятати </b>, що кішки в будь-якому віці можуть легко підхопити хворобу. Тому якщо і випускати гуляти кота у двір, то треба подивитися, які ще тварини там водяться. Тому що кіт може не тільки заразитися чимось, але й у польових умовах він не вміє себе захистити, попри всю свою природну силу </p>
 		</div>
 		<div> 
-			<h3> Кілька цікавих фактів </h3>
+			<h3 class="text_center"> Кілька цікавих фактів </h3>
 			<ol> 
 				<li> Британська короткошерста кішка є однією з найстаріших і однією з найбільших порід кішок Великобританії </li>
 				<li> Існує понад сто варіацій забарвлення та узору вовни кішок цієї породи, варіюється і колір очей, який багато в чому залежить від забарвлення шерсті </li>
@@ -46,7 +47,7 @@
 		</div>
 	</main>
 	<footer> 
-		<p> 2023 Всі права захищені</p>
+		<p class="text_center"> 2023 Всі права захищені</p>
 	</footer>
 </body>
 </html>
