--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,28 +4,29 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> Контактна інформація </title>
+	<link rel="stylesheet" type="text/css" href="../css/base.css">
 </head>
 <body>
 	<header>
 		<nav> 
-			<ul>
-				<li> <a href="../index.html"> Основна сторінка </a> </li>
-				<li> <a href="#"> Контактна інформація </a> </li>
-				<li> <a href="gallery.html"> Галерея </a> </li>
+			<ul class="header_nav">
+				<li class="header_formatted"> <a class="header_text" href="../index.html"> Основна сторінка </a> </li>
+				<li class="header_formatted"> <a class="header_text" href="#"> Контактна інформація </a> </li>
+				<li class="header_formatted"> <a class="header_text" href="gallery.html"> Галерея </a> </li>
 			</ul>
 		</nav>
-		<h1> Контактна інформація </h1>
+		<h1 class="text_center"> Контактна інформація </h1>
 	</header>
 	<main>
-		<h2>  Для зв'язку з нами: </h2>
-		<ul> 
-			<li> Email: example@gmail.com </li>
-			<li> Тел: +380990000000</li>
-			<li> Тел: +380500000000</li>
+		<h2 class="text_center">  Для зв'язку з нами: </h2>
+		<ul class="contact"> 
+			<li class="contact_formatted"> Email: example@gmail.com </li>
+			<li class="contact_formatted"> Тел: +380990000000</li>
+			<li class="contact_formatted"> Тел: +380500000000</li>
 		</ul>
 	</main>
 	<footer> 
-		<p> 2023 Всі права захищені</p>
+		<p class="text_center"> 2023 Всі права захищені</p>
 	</footer>
 </body>
 </html>
