--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -4,40 +4,41 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> Галерея </title>
+	<link rel="stylesheet" type="text/css" href="../css/base.css">
 </head>
 <body>
 	<header>
 		<nav> 
-			<ul>
-				<li> <a href="../index.html"> Основна сторінка </a> </li>
-				<li> <a href="contact.html"> Контактна інформація </a> </li>
-				<li> <a href="#"> Галерея </a> </li>
+			<ul class="header_nav">
+				<li class="header_formatted"> <a class="header_text" href="../index.html"> Основна сторінка </a> </li>
+				<li class="header_formatted"> <a class="header_text" href="contact.html"> Контактна інформація </a> </li>
+				<li class="header_formatted"> <a class="header_text" href="#"> Галерея </a> </li>
 			</ul>
 		</nav>
-		<h1> Фото котиків </h1>
+		<h1 class="text_center"> Фото котиків </h1>
 	</header>
 	<main>
 		<div> <p> У цьому розділі <b> багато красивих фото</b> британських котів різних забарвлень шерсті (чорні, голубі, мармурові, шоколадні та багато інших). Також присутня фотогалерея милих британських кошенят, які своїм зовнішнім виглядом зачарують кого завгодно</p>
-			<h3> Фото британських голубих котів </h3>
+			<h3 class="text_center"> Фото британських голубих котів </h3>
 			<img src="../img/Британська-голуба-кішка-фото.jpg" alt="Photo of British blue cats" width="300px" height="250px">
 			<img src="../img/Британська-кішка-голубого-забарвлення-фото.jpg" alt="Photo of British blue cats" width="300px" height="250px">
 			<img src="../img/Британське-голубе-кошеня-фото.jpg" alt="Photo of British blue cats" width="300px" height="250px">
 		</div>
 		<div>
-			<h3> Фото британських мармурових котів </h3>
+			<h3 class="text_center"> Фото британських мармурових котів </h3>
 			<img src="../img/Британська-кішка-фото1.jpg" alt="Photo of British marble cats" width="300px" height="250px">
 			<img src="../img/Британська-мармурова-кішка-фото.jpg" alt="Photo of British marble cats" width="300px" height="250px">
 			<img src="../img/Британський-білий-та-мраморний-коти.jpg" alt="Photo of British marble cats" width="300px" height="250px">
 		</div>
 		<div>
-			<h3> Фото чорних британських котів </h3>
+			<h3 class="text_center"> Фото чорних британських котів </h3>
 			<img src="../img/Британська-чорна-кішка-фото.jpg" alt="Photo of black British cats" width="300px" height="250px">
 			<img src="../img/Фото-британської-чорної-кішки.jpg" alt="Photo of black British cats" width="300px" height="250px">
 			<img src="../img/Британська-кішка-чорного-кольору-фото.jpg" alt="Photo of black British cats" width="300px" height="250px">
 		</div>
 	</main>
 	<footer> 
-		<p> 2023 Всі права захищені</p>
+		<p class="text_center"> 2023 Всі права захищені</p>
 	</footer>
 </body>
 </html>
